# MessageToAngular

./: CMakeLists.txt  main.cpp
message-display/: README.md  angular.json  package-lock.json  package.json
message-display/src/: index.html
message-display/src/app/: app.component.ts
message-display/src/message/: message.component.ts
message-display/src/services/: message.service.ts
